--- a/libft/Makefile
+++ b/libft/Makefile
@@ -19,7 +19,7 @@ src/ft_strlcpy.c src/ft_strlen.c src/ft_strncmp.c src/ft_strtrim.c src/ft_substr
 src/ft_strrchr.c src/ft_strmapi.c src/ft_striteri.c src/ft_strnstr.c src/ft_bzero.c src/ft_memcpy.c \
 src/ft_memset.c src/ft_memmove.c src/ft_memchr.c src/ft_memcmp.c src/ft_calloc.c src/ft_atoi.c \
 src/ft_itoa.c src/ft_putchar_fd.c src/ft_putstr_fd.c src/ft_putendl_fd.c src/ft_putnbr_fd.c src/ft_putnbr_base_fd.c \
-src/ft_printf/ft_printf.c src/ft_printf/ft_putchar.c src/ft_printf/ft_putnbr.c src/ft_printf/ft_putstr.c src/ft_printf/ft_putunsnbr.c src/ft_printf/ft_putnbr_base.c
+src/ft_printf.c src/printf_utils.c src/get_next_line.c
 
 OBJS = $(SRCS:.c=.o)
 
