--- a/libft/Makefile
+++ b/libft/Makefile
@@ -13,13 +13,13 @@ CME = ar -rcs
 
 CFLAGS = -Wall -Wextra -Werror -g -I inc
 
-SRCS = src/ft_isalpha.c src/ft_isalnum.c src/ft_isascii.c src/ft_isnum.c src/ft_isprint.c src/ft_isalpha.c \
-src/ft_tolower.c src/ft_toupper.c src/ft_str_is_space.c src/ft_split.c src/ft_strdup.c src/ft_strjoin.c src/ft_strlcat.c \
-src/ft_strlcpy.c src/ft_strlen.c src/ft_strncmp.c src/ft_strtrim.c src/ft_substr.c  src/ft_strchr.c \
-src/ft_strrchr.c src/ft_strmapi.c src/ft_striteri.c src/ft_strnstr.c src/ft_bzero.c src/ft_memcpy.c \
-src/ft_memset.c src/ft_memmove.c src/ft_memchr.c src/ft_memcmp.c src/ft_calloc.c src/ft_atoi.c \
-src/ft_itoa.c src/ft_putchar_fd.c src/ft_putstr_fd.c src/ft_putendl_fd.c src/ft_putnbr_fd.c src/ft_putnbr_base_fd.c \
-src/ft_printf.c src/printf_utils.c src/get_next_line.c
+SRCS = ft_isalpha.c ft_isalnum.c ft_isascii.c ft_isnum.c ft_isprint.c ft_isalpha.c \
+ft_tolower.c ft_toupper.c ft_str_is_space.c ft_split.c ft_strdup.c ft_strjoin.c ft_strlcat.c \
+ft_strlcpy.c ft_strlen.c ft_strncmp.c ft_strtrim.c ft_substr.c  ft_strchr.c \
+ft_strrchr.c ft_strmapi.c ft_striteri.c ft_strnstr.c ft_bzero.c ft_memcpy.c \
+ft_memset.c ft_memmove.c ft_memchr.c ft_memcmp.c ft_calloc.c ft_atoi.c \
+ft_itoa.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_putnbr_base_fd.c \
+ft_printf.c printf_utils.c get_next_line.c
 
 OBJS = $(SRCS:.c=.o)
 
