--- a/libft/Makefile
+++ b/libft/Makefile
@@ -19,7 +19,7 @@ ft_strlcpy.c ft_strlen.c ft_strncmp.c ft_strtrim.c ft_substr.c  ft_strchr.c \
 ft_strrchr.c ft_strmapi.c ft_striteri.c ft_strnstr.c ft_bzero.c ft_memcpy.c \
 ft_memset.c ft_memmove.c ft_memchr.c ft_memcmp.c ft_calloc.c ft_atoi.c \
 ft_itoa.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_putnbr_base_fd.c \
-ft_printf.c printf_utils.c get_next_line.c
+ft_printf.c ft_printf_utils.c get_next_line.c
 
 OBJS = $(SRCS:.c=.o)
 
