--- a/libft/Makefile
+++ b/libft/Makefile
@@ -14,7 +14,7 @@ CME = ar -rcs
 CFLAGS = -Wall -Wextra -Werror -g -I inc
 
 SRCS = ft_isalpha.c ft_isalnum.c ft_isascii.c ft_isnum.c ft_isprint.c ft_isalpha.c \
-ft_tolower.c ft_toupper.c ft_str_is_space.c ft_split.c ft_strdup.c ft_strjoin.c ft_strlcat.c \
+ft_tolower.c ft_toupper.c ft_str_error.c ft_split.c ft_strdup.c ft_strjoin.c ft_strlcat.c \
 ft_strlcpy.c ft_strlen.c ft_strncmp.c ft_strtrim.c ft_substr.c  ft_strchr.c \
 ft_strrchr.c ft_strmapi.c ft_striteri.c ft_strnstr.c ft_bzero.c ft_memcpy.c \
 ft_memset.c ft_memmove.c ft_memchr.c ft_memcmp.c ft_calloc.c ft_atoi.c \
